tests/ui/traits/const-traits/default-method-body-is-const-same-trait-ck.stderr
error[E0277]: the trait bound `(): [const] Tr` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:12
   |
LL |         ().a()
   |            ^
   |
help: make the `impl` of trait `Tr` `const`
   |
LL | impl const Tr for () {}
   |      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
